--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -6,7 +6,7 @@
 }
 .header {
   background-color: #111872;
-  color: #ef4444;
+  color: #ffffff;
   padding: 1rem;
 }
 .headerContainer {
@@ -40,7 +40,7 @@
 }
 .footer {
   background-color: #4b5563;
-  color: #cad0d8;
+  color: #bcc5d1;
   padding: 1rem 0;
   text-align: center;
   margin-top: 2rem;
