--- a/src/components/RecipesList.module.css
+++ b/src/components/RecipesList.module.css
@@ -19,6 +19,12 @@
   gap: 1.5rem;
   grid-template-columns: 1fr;
 }
+.loaderContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
 
 @media screen and (min-width: 640px) {
   .grid {
